[gd_scene load_steps=25 format=2]

[ext_resource path="res://actor_framework/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/till/boss/JumpSequence.tscn" type="PackedScene" id=2]
[ext_resource path="res://actor_states/motion/Die.tscn" type="PackedScene" id=3]
[ext_resource path="res://actor_states/ai_states/AIAttack.tscn" type="PackedScene" id=4]
[ext_resource path="res://actor_states/ai_states/Wait.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/till/Pivot.tscn" type="PackedScene" id=6]
[ext_resource path="res://actor_states/motion/Launch.tscn" type="PackedScene" id=7]
[ext_resource path="res://actor_states/motion/Stagger.tscn" type="PackedScene" id=8]
[ext_resource path="res://actors/till/boss/TillBoss.tres" type="Resource" id=9]
[ext_resource path="res://actor_states/ai_states/PlayAnimation.tscn" type="PackedScene" id=10]
[ext_resource path="res://actors/till/boss/RunSequence.tscn" type="PackedScene" id=12]
[ext_resource path="res://actor_states/ai_states/Run.tscn" type="PackedScene" id=13]
[ext_resource path="res://actors/till/boss/Revenge.tscn" type="PackedScene" id=14]
[ext_resource path="res://actors/till/boss/StateMachine.gd" type="Script" id=15]
[ext_resource path="res://actors/till/boss/TillBossSpecialGeyser.tscn" type="PackedScene" id=16]
[ext_resource path="res://actors/till/boss/TillBossSpecialBurst.tscn" type="PackedScene" id=17]
[ext_resource path="res://actors/till/boss/TillBossSpecialSalamander.tscn" type="PackedScene" id=18]
[ext_resource path="res://actors/till/boss/TillBossSpecialCore.tscn" type="PackedScene" id=19]
[ext_resource path="res://actors/till/boss/TillBossSpecialQuake.tscn" type="PackedScene" id=20]
[ext_resource path="res://actors/till/boss/TillBossSpecialBasic.tscn" type="PackedScene" id=21]
[ext_resource path="res://actors/till/boss/TillBossSpecialShortStack.tscn" type="PackedScene" id=22]
[ext_resource path="res://actor_states/Sequence.tscn" type="PackedScene" id=23]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 65.2144, 96 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 42.3857, 87.028 )

[node name="TillBoss" groups=[
"enemies",
] instance=ExtResource( 1 )]

[node name="Pivot" parent="." index="0" instance=ExtResource( 6 )]

[node name="StateMachine" parent="." index="1"]
script = ExtResource( 15 )
pause_offscreen = false

[node name="SpawnLaunch" parent="StateMachine" index="0" instance=ExtResource( 7 )]
animation = "jump"
force = 4000.0
land_animation = "land"

[node name="Sequence" parent="StateMachine" index="1" instance=ExtResource( 23 )]

[node name="RunSequence" parent="StateMachine/Sequence" index="0" instance=ExtResource( 12 )]

[node name="JumpSequence" parent="StateMachine/Sequence" index="1" instance=ExtResource( 2 )]

[node name="Sequence1Opener" parent="StateMachine" index="2" instance=ExtResource( 23 )]

[node name="Wait" parent="StateMachine/Sequence1Opener" index="0" instance=ExtResource( 5 )]

[node name="Run" parent="StateMachine/Sequence1Opener" index="1" instance=ExtResource( 13 )]
disable_player_stopper = true
to_target = false
to_target_position = true
stagger = false

[node name="MotionSteering" parent="StateMachine/Sequence1Opener/Run" index="1"]
slow_radius = 100.0

[node name="Prepare" parent="StateMachine/Sequence1Opener" index="2" instance=ExtResource( 5 )]
animation = "prepare"
look_direction = Vector2( 1, 0 )

[node name="Timer" parent="StateMachine/Sequence1Opener/Prepare" index="3"]
wait_time = 0.5

[node name="SpecialBasic" parent="StateMachine/Sequence1Opener" index="3" instance=ExtResource( 4 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 21 ) ]
initialize_on_start = false
stagger = false
one_time = true

[node name="Burst" parent="StateMachine/Sequence1Opener" index="4" instance=ExtResource( 4 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 17 ) ]
initialize_on_start = false
stagger = false
one_time = true

[node name="Geyser" parent="StateMachine/Sequence1Opener" index="5" instance=ExtResource( 4 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 16 ) ]
initialize_on_start = false
stagger = false
one_time = true

[node name="Recover" parent="StateMachine/Sequence1Opener" index="6" instance=ExtResource( 10 )]
animation = "slam_down_recover"

[node name="Sequence2Opener" parent="StateMachine" index="3" instance=ExtResource( 23 )]

[node name="Wait" parent="StateMachine/Sequence2Opener" index="0" instance=ExtResource( 5 )]

[node name="Run" parent="StateMachine/Sequence2Opener" index="1" instance=ExtResource( 13 )]
disable_player_stopper = true
to_target = false
to_target_position = true
stagger = false

[node name="Prepare" parent="StateMachine/Sequence2Opener" index="2" instance=ExtResource( 5 )]
animation = "prepare"
look_direction = Vector2( 1, 0 )

[node name="Timer" parent="StateMachine/Sequence2Opener/Prepare" index="3"]
wait_time = 0.5

[node name="Geyser" parent="StateMachine/Sequence2Opener" index="3" instance=ExtResource( 4 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 16 ) ]
initialize_on_start = false
stagger = false
one_time = true

[node name="ShortStack" parent="StateMachine/Sequence2Opener" index="4" instance=ExtResource( 4 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 22 ) ]
initialize_on_start = false
stagger = false
one_time = true

[node name="Quake" parent="StateMachine/Sequence2Opener" index="5" instance=ExtResource( 4 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 20 ) ]
initialize_on_start = false
stagger = false
one_time = true

[node name="Burst" parent="StateMachine/Sequence2Opener" index="6" instance=ExtResource( 4 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 17 ) ]
initialize_on_start = false
stagger = false
one_time = true

[node name="Recover" parent="StateMachine/Sequence2Opener" index="7" instance=ExtResource( 10 )]
animation = "slam_down_recover"

[node name="Sequence3Opener" parent="StateMachine" index="4" instance=ExtResource( 23 )]

[node name="Wait" parent="StateMachine/Sequence3Opener" index="0" instance=ExtResource( 5 )]

[node name="Run" parent="StateMachine/Sequence3Opener" index="1" instance=ExtResource( 13 )]
disable_player_stopper = true
to_target = false
to_target_position = true
stagger = false

[node name="Prepare" parent="StateMachine/Sequence3Opener" index="2" instance=ExtResource( 5 )]
animation = "prepare"
look_direction = Vector2( 1, 0 )

[node name="Timer" parent="StateMachine/Sequence3Opener/Prepare" index="3"]
wait_time = 0.5

[node name="Salamander" parent="StateMachine/Sequence3Opener" index="3" instance=ExtResource( 4 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 18 ) ]
initialize_on_start = false
stagger = false
one_time = true

[node name="ShortStack" parent="StateMachine/Sequence3Opener" index="4" instance=ExtResource( 4 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 22 ) ]
initialize_on_start = false
stagger = false
one_time = true

[node name="Burst" parent="StateMachine/Sequence3Opener" index="5" instance=ExtResource( 4 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 17 ) ]
initialize_on_start = false
stagger = false
one_time = true

[node name="ShortStack2" parent="StateMachine/Sequence3Opener" index="6" instance=ExtResource( 4 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 22 ) ]
initialize_on_start = false
stagger = false
one_time = true

[node name="Quake" parent="StateMachine/Sequence3Opener" index="7" instance=ExtResource( 4 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 20 ) ]
initialize_on_start = false
stagger = false
one_time = true

[node name="Core" parent="StateMachine/Sequence3Opener" index="8" instance=ExtResource( 4 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 19 ) ]
initialize_on_start = false
stagger = false
one_time = true

[node name="ShortStack3" parent="StateMachine/Sequence3Opener" index="9" instance=ExtResource( 4 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 22 ) ]
initialize_on_start = false
stagger = false
one_time = true

[node name="Recover" parent="StateMachine/Sequence3Opener" index="10" instance=ExtResource( 10 )]
animation = "slam_down_recover"

[node name="Stagger" parent="StateMachine" index="5" instance=ExtResource( 8 )]
invincibility_buffer = 0.2
revenge_threshold = 10.0
revenge_state = "Revenge"

[node name="Die" parent="StateMachine" index="6" instance=ExtResource( 3 )]
animation = "stagger"
queue_free_on_die = false

[node name="Revenge" parent="StateMachine" index="7" instance=ExtResource( 14 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -96 )
shape = SubResource( 1 )

[node name="CollisionBox" parent="." index="3"]
position = Vector2( 0, -87.6206 )
shape = SubResource( 2 )

[node name="ActorInterface" parent="." index="4"]
show = true

[node name="Stats" parent="." index="6"]
character_stats = ExtResource( 9 )

[node name="VisibilityEnabler2D" parent="." index="10"]
position = Vector2( -0.176147, -88.5533 )
scale = Vector2( 193.4, 123.216 )

[editable path="StateMachine/Sequence1Opener/Run"]

[editable path="StateMachine/Sequence1Opener/Prepare"]

[editable path="StateMachine/Sequence2Opener/Wait"]

[editable path="StateMachine/Sequence2Opener/Run"]

[editable path="StateMachine/Sequence2Opener/Prepare"]

[editable path="StateMachine/Sequence3Opener/Run"]

[editable path="StateMachine/Sequence3Opener/Prepare"]

[editable path="Hurtbox"]
